Enable full error-prone configuration on samples
We should be holding our sample code to the same standard as our library code. Plus it represents a simplification on how projects are configured by removing a special case.

Test: ./gradlew assemble
Change-Id: I1d0e0719108f1b80d25940521cb12f2270277c15